# lua-interpreter

./: .ocamlinit  Lua.opam  Makefile  README.md  REPL.ml  dune  dune-project  repl.t  test.2.lua
lib/: ast.ml  dune  interpreter.ml  interpreter.mli  lexer.ml  parser.ml  parser.mli  repl.ml  repl.mli  util.ml
test/: comments-in-between.lua  comments.lua  condition.lua  data-types.lua  dofile.lua  dune  factorial-execution.lua  logical.lua  print-function-call.lua  return-a-function.lua  shadowing.lua  test.0.lua  test.1.lua  test.2.lua  test.3.lua  test.4.lua  test.5.lua  test.6.lua  test.7.lua
