(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Muravev Kirill")

(maintainers "Muravev Kirill")

(bug_reports "-")

(homepage "-")

(package
 (name Lua)
 (synopsis "An interpreter for Lua")
 (description
  "An interpreter for Lua language that at least should be able to execute a program that computes the factorial.")
 (version 0.1)
 (depends
  dune
  angstrom
  (odoc :with-doc)
  (ocamlformat :build)
  ; After adding dependencies to 'dune' files add the same dependecies here too
  ))
